# causal-penalization

./: .gitignore  README.md  pyproject.toml  test.py
estimator/: __init__.py  estimator.py
estimator/hawkes/: hawk_estimator.py
main_simulation/: README.md  main.py
main_simulation/estimation/: __init__.py  likelihood.py  parameter_estimation.py
main_simulation/simulation/: __init__.py  data_generation.py  data_perturbation.py
main_simulation/visualization/: __init__.py  visualization.py
penalty_term_simulation/: simulate_penalty_terms.py
performance_simulation/: simple_hawkes.py
pfynforest/analyze_data/: analyze.py
pfynforest/data/raw/: envidatpfyncrowncond2016.xlsx
pfynforest/load_data/: load_data.py
plot_beta_convergence/: plot_beta.py
simulate/: simulate_marked_temporal.py
