[tool.poetry]
name = "causal-penalization"
version = "0.1.0"
description = "A Python project for causal inference with penalization methods"
authors = ["Simon Zimmermann"]
readme = "README.md"
packages = [{include = "estimator"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.2.0"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 